assets/dev/sass/image-hovereffect.scss
/* ... */
.ha-ihe-fig.ha-effect-sarah {
	background-color: #42b078;
	.ha-ihe-img {
		max-width: none;
		width: calc(100% + 20px);
		transition: opacity 0.35s, transform 0.35s;
		transform: translate3d(-10px, 0, 0);
		backface-visibility: hidden;
	}
	&:hover {
		.ha-ihe-img {
			opacity: 0.4;
			transform: translate3d(0, 0, 0);
		}
		.ha-ihe-title {
			&::after {
				transform: translate3d(0, 0, 0);
			}
		}
		.ha-ihe-desc {
			opacity: 1;
			transform: translate3d(0, 0, 0);
		}
	}
	.ha-ihe-caption {
		text-align: left;
		align-items: stretch;
		justify-content: flex-start;
	}
	.ha-ihe-title {
		position: relative;
		overflow: hidden;
		padding: 0.5em 0;
		&::after {
			position: absolute;
			bottom: 0;
			left: 0;
			width: 100%;
			height: 3px;
			background: var(--ha-ihe-title-after-color);
			content: "";
			transition: transform 0.35s;
			transform: translate3d(-100%, 0, 0);
		}
	}
	.ha-ihe-desc {
		padding: 1em 0;
		opacity: 0;
		transition: opacity 0.35s, transform 0.35s;
		transform: translate3d(100%, 0, 0);
	}
}
.ha-ihe-fig.ha-effect-chico {
	.ha-ihe-img {
		transition: opacity 0.35s, transform 0.35s;
		transform: scale(1.12);
	}
	&:hover {
		.ha-ihe-img {
			opacity: 0.5;
			transform: scale(1);
		}
		.ha-ihe-caption {
			&::before {
				opacity: 1;
				transform: scale(1);
			}
		}
		.ha-ihe-desc {
			opacity: 1;
			transform: scale(1);
		}
	}
	.ha-ihe-caption {
		padding: 3em;
		&::before {
			position: absolute;
			top: 30px;
			right: 30px;
			bottom: 30px;
			left: 30px;
			border: 1px solid var(--ha-ihe-fig-before-color);
			content: "";
			transform: scale(1.1);
			opacity: 0;
			transition: opacity 0.35s, transform 0.35s;
		}
	}
	.ha-ihe-desc {
		opacity: 0;
		transition: opacity 0.35s, transform 0.35s;
		margin: 0 auto;
		max-width: 200px;
		transform: scale(1.5);
	}
	.ha-ihe-title {
		padding: 10% 0 5%;
	}
}
.ha-ihe-fig.ha-effect-julia {
	background-color: #2f3238;
	.ha-ihe-img {
		max-width: none;
		height: 400px;
		transition: opacity 1s, transform 1s;
		backface-visibility: hidden;
	}
	.ha-ihe-caption {
		text-align: left;
	}
	.ha-ihe-title {
		position: relative;
		padding: 0.5em 0;
	}
	.ha-ihe-desc {
		display: inline-block;
		margin: 0 0 0.25em;
		padding: 0.4em 1em;
		background: rgba(255, 255, 255, 0.9);
		color: #2f3238;
		text-transform: none;
		font-weight: 500;
		font-size: 75%;
		transition: opacity 0.35s, transform 0.35s;
		transform: translate3d(-360px, 0, 0);
		&:first-child {
			transition-delay: 0.15s;
		}
		&:nth-of-type(2) {
			transition-delay: 0.1s;
		}
		&:nth-of-type(3) {
			transition-delay: 0.05s;
		}
	}
	&:hover {
		.ha-ihe-desc {
			&:first-child {
				transition-delay: 0s;
			}
			&:nth-of-type(2) {
				transition-delay: 0.05s;
			}
			&:nth-of-type(3) {
				transition-delay: 0.1s;
			}
			opacity: 1;
			transform: translate3d(0, 0, 0);
		}
		.ha-ihe-img {
			opacity: 0.4;
			transform: scale3d(1.1, 1.1, 1);
		}
	}
}
.ha-ihe-fig.ha-effect-goliath {
	background-color: #df4e4e;
	.ha-ihe-img {
		transition: transform 0.35s;
		backface-visibility: hidden;
	}
	.ha-ihe-title {
		transition: transform 0.35s;
		position: absolute;
		bottom: 0;
		left: auto;
		padding: 1em;
	}
	.ha-ihe-desc {
		position: absolute;
		bottom: 0;
		left: auto;
		padding: 1em;
		text-transform: none;
		// font-size: 90%;
		opacity: 0;
		transition: opacity 0.35s, transform 0.35s;
		transform: translate3d(0, 50px, 0);
	}
	&:hover {
		.ha-ihe-img {
			transform: translate3d(0, -80px, 0);
		}
		.ha-ihe-title {
			transform: translate3d(0, -100px, 0);
		}
		.ha-ihe-desc {
			opacity: 1;
			transform: translate3d(0, 0, 0);
		}
	}
}
.ha-ihe-fig.ha-effect-apollo {
	background-color: #3498db;
	.ha-ihe-img {
		opacity: 0.95;
		transition: opacity 0.35s, transform 0.35s;
		transform: scale3d(1.05, 1.05, 1);
	}
	.ha-ihe-caption {
		align-items: flex-start;
		justify-content: flex-start;
		&::before {
			position: absolute;
			top: 0;
			left: 0;
			width: 100%;
			height: 100%;
			background: rgba(255, 255, 255, 0.5);
			content: "";
			transition: transform 0.6s;
			transform: scale3d(1.9, 1.4, 1) rotate3d(0, 0, 1, 45deg) translate3d(0, -100%, 0);
		}
	}
	.ha-ihe-desc {
		position: absolute;
		right: 0;
		bottom: 0;
		margin: 3em;
		padding: 0 1em;
		max-width: 150px;
		border-right: 4px solid var(--ha-ihe-desc-border-color);
		text-align: right;
		opacity: 0;
		transition: opacity 0.35s;
	}
	.ha-ihe-title {
		text-align: left;
	}
	&:hover {
		.ha-ihe-img {
			opacity: 0.6;
			transform: scale3d(1, 1, 1);
		}
		.ha-ihe-caption {
			&::before {
				transform: scale3d(1.9, 1.4, 1) rotate3d(0, 0, 1, 45deg) translate3d(0, 100%, 0);
			}
		}
		.ha-ihe-desc {
			opacity: 1;
			transition-delay: 0.1s;
		}
	}
}
.ha-ihe-fig.ha-effect-moses {
	background-color: #ec65b7;
	.ha-ihe-img {
		opacity: 0.85;
		transition: opacity 0.35s;
	}
	.ha-ihe-caption {
		align-items: flex-start;
	}
	.ha-ihe-title {
		padding: 20px;
		width: 50%;
		height: 50%;
		border: 2px solid #fff;
		padding: 20px;
		width: 50%;
		height: 50%;
		text-align: left;
		transition: transform 0.35s;
		transform: translate3d(10px, 10px, 0);
	}
	.ha-ihe-desc {
		padding: 20px;
		width: 50%;
		height: 50%;
		border: 2px solid var(--ha-ihe-desc-border-color);
		float: right;
		padding: 20px;
		text-align: right;
		opacity: 0;
		transition: opacity 0.35s, transform 0.35s;
		transform: translate3d(50%, -50%, 0);
	}
	&:hover {
		.ha-ihe-title {
			transform: translate3d(0, 0, 0);
		}
		.ha-ihe-desc {
			opacity: 1;
			transform: translate3d(100%, 0, 0);
		}
		.ha-ihe-img {
			opacity: 0.6;
		}
	}
}
/* ... */

